@@ -39,6 +39,8 @@ HC   18- sumnummonieninit(,,a) + sumnummonien(n = a, ...) with a > 1 gave wrong
          of isogenous curves
       9- mseval(W,s,p): allow 2x2 matrix for the path 'p' argument
      10- allow mseval(W, t_MAT, p) to evaluate many symbols simultaneously
+     11- allow polrootsreal() and polsturm() with non-rational real polynomials
+         (input is rounded first)
 
   Added
       1- [libari] ZM_isidentity
